# stellaris-advisor

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: existing-tools.md  knowledge-design.md  localization-and-decisions.md  roadmap.md  ui.md  visibility-policy.md
examples/: sample_meta_only.sav
examples/knowledge/: starter.jsonl
skills/: stellaris.skill.md
src/stellaris_advisor/: __init__.py  advice.py  analyzer.py  clausewitz.py  cli.py  detail_level.py  display_names.py  knowledge.py  localization.py  models.py  report_language.py  save_reader.py  strategic_focus.py  ui.py  visibility.py
tests/: test_advice.py  test_display_names.py  test_knowledge.py  test_localization.py  test_save_reader.py
