[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stellaris-advisor"
version = "0.1.0"
description = "A Stellaris save-game analysis assistant prototype."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Stellaris Advisor Contributors" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
stellaris-advisor = "stellaris_advisor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

